--- a/teste.html
+++ b/teste.html
@@ -16,7 +16,7 @@ dados especiais
 <body>
   <div class="container">
     <header class="header">
-      <p class="primary-title-header">Bem-vinda ao nosso site! </p>
+      <p class="primary-title-header">Bem-vindo ao nosso site! </p>
       <p class="secondary-title-header">desenvolvido para o nosso dia. Aproveite!</p>
     </header>
     <section class="main-content">
